# aed3-tp02

./: .gitignore  README.md
ej-1/: ej-1.cpp
ej-2/: ej-2.cpp
ej-3/: CMakeLists.txt  ej-3.cpp
ej-3/algoritmos-alternativos/dense-kruskal/: CMakeLists.txt  dense-kruskal.cpp
ej-3/algoritmos-alternativos/unoptimized_kruskal/: CMakeLists.txt  unoptimized_kruskal.cpp
ej-3/experimentacion/: CMakeLists.txt  experimento.cpp  fastmodems_test.cpp  generar_instancias.py  graficos.py  modems_test.cpp  slowmodems_test.cpp
ej-3/experimentacion/algoritmos/: modems.h
ej-3/experimentacion/algoritmos/impl/: modems-denso.cpp  modems-dsu-ingenuo.cpp  modems-dsu.cpp
ej-3/implementacion/: ej-3.cpp
ej-3/informe/: main.tex
ej-3/informe/files/src/: caratula.tex  experimentacion.tex  modems.tex  resumen.tex
ej-3/informe/files/src/.code/: modems.pseudo
